--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -21,46 +21,33 @@ jobs:
           # Define the README file path
           README_FILE="README.md"
 
+          # Add introductory content
           echo "# 알고리즘 풀이 ![js](https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=JavaScript&logoColor=black)" > $README_FILE
           echo "> 백준허브로 연동된 자동 커밋 리포지토리 [BaekjoonHub](https://github.com/BaekjoonHub/BaekjoonHub)." >> $README_FILE
-          echo "> " >> $README_FILE
-          echo "> _문제를 푼 순서로 기재했습니다_" >> $README_FILE
-          echo "" >> $README_FILE  # Adds a blank line
+          echo ">" >> $README_FILE
+          echo "> _Readme는 문제 번호에 따라 자동 업데이트 합니다._" >> $README_FILE
+          echo "" >> $README_FILE  # Blank line for spacing
           echo "# 프로그래머스 문제" >> $README_FILE
 
-          # Start the README content
-          echo "## Level 0." > $README_FILE
-          echo "| 난이도 | 코드 (내 풀이) | 풀어본 횟수 | 해결여부 |" >> $README_FILE
-          echo "| :----: | :-------------------------: | :-------: | :--: |" >> $README_FILE
-
-          # Function to process each level folder (adjust as per folder structure)
-          update_level() {
-            local level=$1
-            local level_folder="프로그래머스/$level"
-            
+          # Append each level section
+          for level in 0 1 2; do
+            echo "" >> $README_FILE
             echo "## Level $level." >> $README_FILE
             echo "| 난이도 | 코드 (내 풀이) | 풀어본 횟수 | 해결여부 |" >> $README_FILE
             echo "| :----: | :-------------: | :-------: | :--: |" >> $README_FILE
-
+            
+            # Find each problem in the level directory
+            level_folder="프로그래머스/$level"
             for problem in $(ls "$level_folder"); do
               problem_path="$level_folder/$problem"
               problem_name=$(basename "$problem")
-
-              # Get the commit count for the problem file
               commit_count=$(git rev-list --count HEAD -- "$problem_path")
-
-              # Generate GitHub link for the problem
               problem_link="https://github.com/chay140/Algorithms/tree/main/$problem_path"
-
-              # Append the problem row to the README
+              
+              # Append the problem entry to the README
               echo "| Lv.$level | [$problem_name]($problem_link) | $commit_count | O |" >> $README_FILE
             done
-          }
-
-          # Process each level
-          update_level 0
-          update_level 1
-          update_level 2
+          done
 
           # Configure Git and commit the README update
           git config --global user.name "github-actions[bot]"
