리드미 레밸 날짜 업데이트

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -58,8 +58,11 @@ jobs:
               latest_date=$(git log -1 --date=short --pretty=format:"%ad" -- "$problem_path")
               problem_link="https://github.com/chay140/Algorithms/tree/main/$problem_path"
               
-              # 가장 최근에 푼 레밸 날짜
-              if [ -z "$latest_date_per_level" ] || [ "$(echo "$latest_date" | sed 's/-//g')" -gt "$(echo "$latest_date_per_level" | sed 's/-//g')" ]; then
+              # 가장 최근에 푼 레밸 날짜 (날짜를 숫자로 변환하여 비교)
+              latest_date_numeric=$(echo "$latest_date" | sed 's/-//g')
+              latest_date_per_level_numeric=$(echo "$latest_date_per_level" | sed 's/-//g')
+              
+              if [ -z "$latest_date_per_level" ] || [ "$latest_date_numeric" -gt "$latest_date_per_level_numeric" ]; then
                 latest_date_per_level="$latest_date"
               fi
 
